C++/vrcc.h


VRCC_API int Role_ListCount();
VRCC_API int Role_Version();
VRCC_API int Role_AutotuneEnabled(const char* role_id);
VRCC_API int Role_RadCtrlEnabled(const char* role_id);
VRCC_API void Role_SetRole(const char* role_id);
VRCC_API int Role_CallingEnabled(const char* role_id);
VRCC_API int Role_ChatEnabled(const char* role_id);
VRCC_API int EntityState_ListCount();
VRCC_API int EntityState_Version();
VRCC_API void EntityState_SetEntityState(const char* id);
VRCC_API float Headset_VoxThreshold();
VRCC_API int Headset_MicrophoneMode();
VRCC_API float Headset_EarphoneVolume();
VRCC_API float Headset_MicVolume();
VRCC_API float Headset_SidetoneVolume();
VRCC_API int Headset_HasSidetone();
VRCC_API void Headset_SetHeadsetPreset(int preset);
VRCC_API void Headset_SetVoxThreshold(float threshold);
VRCC_API void Headset_SetMicrophoneMode(int mode);
VRCC_API void Headset_SetCallMicrophoneMute(int active);
VRCC_API void Headset_SetEarphoneVolume(float volume);
VRCC_API void Headset_SetMicVolume(float volume);
VRCC_API void Headset_SetSidetoneVolume(float volume);
VRCC_API void PTT_SetPressed_Multi(int ptt, int pressed);
VRCC_API void PTT_SetPressed(int pressed);
VRCC_API int PTT_GetPressed_Multi(int ptt);
VRCC_API int PTT_GetPressed();
VRCC_API int PTT_HWGetPressed_Multi(int ptt);
VRCC_API int PTT_HWGetPressed();
VRCC_API int Radio_ListCount();
VRCC_API void Radio_SetNet(int radio_index, int net_index);
VRCC_API void Radio_SetNetRxFrequency(int radio_index, const char* net_id, unsigned long long freq);
VRCC_API unsigned long long Radio_NetRxFrequencyActive(int radio_index);
VRCC_API void Radio_SetNetTxFrequency(int radio_index, const char* net_id, unsigned long long freq);
VRCC_API unsigned long long Radio_NetTxFrequencyActive(int radio_index);
VRCC_API int Radio_NetListCount(int radio_index);
VRCC_API unsigned long long Radio_NetFrequency(int radio_index, int net_index);
VRCC_API int Radio_NetCryptoEnabled(int radio_index, int net_index);
VRCC_API int Radio_NetFreqHopNetId(int radio_index, int net_index);
VRCC_API void Radio_SetReceiveEnabled(int radio_index, int enable);
VRCC_API void Radio_SetTransmitEnabled(int radio_index, int enable);
VRCC_API void Radio_SetCryptoEnable(int radio_index, int enable);
VRCC_API void Radio_SetVolume(int radio_index, float volume);
VRCC_API int Radio_IsReceiveEnabled(int radio_index);
VRCC_API int Radio_IsTransmitEnabled(int radio_index);
VRCC_API int Radio_IsReceiving(int radio_index);
VRCC_API int Radio_IsTransmitting(int radio_index);
VRCC_API int Radio_IsShared(int radio_index);
VRCC_API float Radio_Volume(int radio_index);
VRCC_API int Radio_IsNetLocked(int radio_index);
VRCC_API int Radio_IsRXModeLocked(int radio_index);
VRCC_API int Radio_Balance(int radio_index);
VRCC_API int Radio_CryptoEnabled(int radio_index);
VRCC_API int Radio_Version();
VRCC_API int Radio_PTT(int radio_index);
VRCC_API void Earshot_Enable(int enable);
VRCC_API void Earshot_SetPTT(int ptt);
VRCC_API int Earshot_Receiving(void);
VRCC_API int Earshot_Transmitting(void);
VRCC_API void WorldPosition_Set(float xcoord, float ycoord, float zcoord);
VRCC_API int Joystick_ListCount();
VRCC_API int Joystick_ButtonCount(int list_index);
VRCC_API int Joystick_Active_Multi(int ptt);
VRCC_API int Joystick_Active();
VRCC_API int Joystick_ButtonActive_Multi(int ptt);
VRCC_API int Joystick_ButtonActive();
VRCC_API int Joystick_Pressed_Multi(int ptt);
VRCC_API int Joystick_Pressed();
VRCC_API void Joystick_SetButton_Multi(int ptt, int js, int btn);
VRCC_API void Joystick_SetButton(int js, int btn);
VRCC_API int Codec_Get();
VRCC_API void Codec_Set(int codec);