C#/VoisusCS/VRCC.cs


        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Role_SetRole(String roleid);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_AutotuneEnabled([MarshalAs(UnmanagedType.LPStr)] String role_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_RadCtrlEnabled([MarshalAs(UnmanagedType.LPStr)] String role_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_CallingEnabled([MarshalAs(UnmanagedType.LPStr)] String role_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Role_ChatEnabled ([MarshalAs(UnmanagedType.LPStr)] String role_id);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int EntityState_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int EntityState_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void EntityState_SetEntityState([MarshalAs(UnmanagedType.LPStr)] String id);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Headset_VoxThreshold();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static MicMode_t Headset_MicrophoneMode();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Headset_EarphoneVolume();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Headset_MicVolume();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Headset_SidetoneVolume();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Headset_HasSidetone();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetHeadsetPreset(HeadsetPreset_t preset);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetVoxThreshold(float threshold);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetMicrophoneMode(MicMode_t mode);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetCallMicrophoneMute(int active);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetEarphoneVolume(float volume);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetMicVolume(float volume);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Headset_SetSidetoneVolume(float volume);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void PTT_SetPressed_Multi(int ptt, int pressed);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void PTT_SetPressed(int pressed);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int PTT_GetPressed_Multi(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int PTT_GetPressed();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int PTT_HWGetPressed_Multi(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int PTT_HWGetPressed();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetNet(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_NetListCount(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_NetCryptoEnabled(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_NetFreqHopNetId(int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetReceiveEnabled(int radio_index, int enable);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetTransmitEnabled(int radio_index, int enable);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetCryptoEnable(int radio_index, int enable);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetVolume(int radio_index, float volume);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsReceiveEnabled(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsTransmitEnabled(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsReceiving(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsTransmitting(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsShared(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static float Radio_Volume(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_Balance(Balance_t radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_Version();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsNetLocked(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_IsRXModeLocked(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_CryptoEnabled(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Radio_PTT(int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ulong 	Radio_NetFrequency (int radio_index, int net_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetNetRxFrequency(int radio_index, [MarshalAs(UnmanagedType.LPStr)] String net_id, [MarshalAs(UnmanagedType.U8)] ulong freq);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetNetTxFrequency(int radio_index, [MarshalAs(UnmanagedType.LPStr)] String net_id, [MarshalAs(UnmanagedType.U8)] ulong freq);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Radio_SetNetID_Unsafe(int radio_index, [MarshalAs(UnmanagedType.LPStr)] String net_id);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ulong Radio_NetTxFrequencyActive (int radio_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static ulong Radio_NetRxFrequencyActive (int radio_index);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Earshot_Enable(int enable);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Earshot_SetPTT(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Earshot_Receiving();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Earshot_Transmitting();

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void WorldPosition_Set(float xcoord, float ycoord, float zcoord);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_ListCount();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_ButtonCount(int list_index);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_Active_Multi(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_Active();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_ButtonActive_Multi(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_ButtonActive();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_Pressed_Multi(int ptt);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static int Joystick_Pressed();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Joystick_SetButton_Multi(int ptt, int js, int btn);
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Joystick_SetButton(int js, int btn);

        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static Codec_t Codec_Get();
        [DllImport("VRCClient.dll", CallingConvention = CallingConvention.Cdecl)]
        public extern static void Codec_Set(Codec_t codec);
